# ControlPNU

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
Matlab/PNUamplitude/: calc_amplitude.m  calc_laphcx.m  cut_n_periods.m  lachx.tex  lachx_el.tex  main.m  response.tex
Matlab/PNUamplitude/freqlog/: input_freq_0.1_amplitude_10.csv  input_freq_0.1_amplitude_20.csv  input_freq_0.1_amplitude_30.csv  input_freq_0.1_amplitude_45.csv  input_freq_0.1_amplitude_5.csv  input_freq_0.1_amplitude_60.csv  input_freq_0.2_amplitude_10.csv  input_freq_0.2_amplitude_20.csv  input_freq_0.2_amplitude_30.csv  input_freq_0.2_amplitude_45.csv  input_freq_0.2_amplitude_5.csv  input_freq_0.2_amplitude_60.csv  input_freq_0.3_amplitude_10.csv  input_freq_0.3_amplitude_20.csv  input_freq_0.3_amplitude_30.csv  input_freq_0.3_amplitude_45.csv  input_freq_0.3_amplitude_5.csv  input_freq_0.3_amplitude_60.csv  input_freq_0.4_amplitude_10.csv  input_freq_0.4_amplitude_20.csv  input_freq_0.4_amplitude_30.csv  input_freq_0.4_amplitude_45.csv  input_freq_0.4_amplitude_5.csv  input_freq_0.4_amplitude_60.csv  input_freq_0.5_amplitude_10.csv  input_freq_0.5_amplitude_20.csv  input_freq_0.5_amplitude_30.csv  input_freq_0.5_amplitude_45.csv  input_freq_0.5_amplitude_5.csv  input_freq_0.5_amplitude_60.csv  input_freq_0.6_amplitude_10.csv  input_freq_0.6_amplitude_20.csv  input_freq_0.6_amplitude_30.csv  input_freq_0.6_amplitude_45.csv  input_freq_0.6_amplitude_5.csv  input_freq_0.6_amplitude_60.csv  input_freq_0.7_amplitude_10.csv  input_freq_0.7_amplitude_20.csv  input_freq_0.7_amplitude_30.csv  input_freq_0.7_amplitude_45.csv  (+140 more)
Matlab/RagazziniModel/: rag_sin.tex  rag_step.tex  ragazzini.m  ragazzini_model.slx  ragazzini_model.slxc
Matlab/TastenModel/: tasten.m  tasten_model.slx  tasten_sin.tex  tasten_step.tex  untitled.slx.autosave
PNU/: CMakeLists.txt  main.cpp
PNU/include/: commands.h  connection.h  objects.h  reader.h  transformer.h
PNU/src/: connection.cpp  objects.cpp  reader.cpp  transformer.cpp
Tests/Unit/: CMakeLists.txt  angles_test.cpp
include/: commands.h  connection.h  logger.h  modes.h  objects.h  reader.h  scenarios.h  transformer.h
log/: log.csv
src/: connection.cpp  logger.cpp  main.cpp  modes.cpp  objects.cpp  reader.cpp  scenarios.cpp  transformer.cpp
(+363 files in other folders)
